fix double vertical scrollbar

--- a/scss/fermyon-base.scss
+++ b/scss/fermyon-base.scss
@@ -14,7 +14,6 @@ main {
 body {
     background: lighten($lightlavender, 5%);
     min-height: 100vh;
-    overflow-x: hidden;
 }
 
 main {
